[gd_scene load_steps=3 format=3 uid="uid://tkg87c5r4e1q"]

[ext_resource type="PackedScene" uid="uid://dfqauvgvylk35" path="res://src/ui/components/scenes/number_box.tscn" id="1_8p3d1"]
[ext_resource type="Script" path="res://src/ui/layouts/global_styles/scripts/motion_blur_content.gd" id="1_jrpwf"]

[node name="MotionBlurContent" type="PanelContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_jrpwf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Enable" type="CheckButton" parent="VBoxContainer"]
layout_mode = 2
text = "Enable"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "X"

[node name="X" parent="VBoxContainer/HBoxContainer" instance=ExtResource("1_8p3d1")]
layout_mode = 2
size_flags_horizontal = 3
step = 0.1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "Y"

[node name="Y" parent="VBoxContainer/HBoxContainer2" instance=ExtResource("1_8p3d1")]
layout_mode = 2
size_flags_horizontal = 3
step = 0.1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer3"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.4
text = "Blur Amount"

[node name="BlurAmount" parent="VBoxContainer/HBoxContainer3" instance=ExtResource("1_8p3d1")]
layout_mode = 2
size_flags_horizontal = 3
allow_lesser = false

[connection signal="toggled" from="VBoxContainer/Enable" to="." method="_on_enable_toggled"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/X" to="." method="_on_x_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/Y" to="." method="_on_y_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/BlurAmount" to="." method="_on_blur_amount_value_changed"]
